--- a/dashboard.html
+++ b/dashboard.html
@@ -120,7 +120,7 @@
         <div class="actions">
             <h3>Actions</h3>
             <button onclick="window.location.href='postride.html'">Post a Ride</button>
-            <button>Find a Ride</button>
+            <button onclick="window.location.href='findaride.html'">Find a Ride</button>
         </div>
 
         <!-- Ride History -->
@@ -141,8 +141,6 @@
                 </li>
             </ul>
         </div>
-
-        <!-- Current Rides -->
         <div class="current-rides">
             <h3>Current Rides</h3>
             <ul>
@@ -157,6 +155,6 @@
             </ul>
         </div>
     </div>
-<script src="dashboard.html"></script>
+<script src="dashboard1.js"></script>
 </body>
 </html>
