--- a/findaride.html
+++ b/findaride.html
@@ -86,8 +86,7 @@
 
     <nav>
         <a href="dashboard.html">Dashboard</a>
-        <a href="findride.html">Find a Ride</a>
-        <a href="postride.html">Post a Ride</a>
+        <a href="rides.html">Rides</a>
         <a href="#">Logout</a>
     </nav>
 
