--- a/dashboard.html
+++ b/dashboard.html
@@ -102,7 +102,7 @@
         <!-- Dashboard Header -->
         <div class="dashboard-header">
             <h2>Welcome, [User Name]</h2>
-            <button>Edit Profile</button>
+            <button onclick="window.location.href='editprofile.html'">Edit Profile</button>
         </div>
 
         <!-- User Information -->
