login_page.html

--- a/login_page.html
+++ b/login_page.html
@@ -105,7 +105,7 @@
             </div>
 
             <!-- Submit Button -->
-            <button type="submit">Log In</button>
+            <button onclick="window.location.href='dashboard.html'">Log In</button>
         </form>
 
         <!-- Link to Sign-Up Page -->
