signup_page.html

--- a/signup_page.html
+++ b/signup_page.html
@@ -103,7 +103,7 @@
             <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" required>
 
             <!-- Submit Button -->
-            <button type="submit">Sign Up</button>
+            <button onclick="window.location.href='login_page.html'">Sign Up</button>
         </form>
 
         <!-- Link to Login Page -->
