--- a/dashboard.html
+++ b/dashboard.html
@@ -95,7 +95,7 @@
     <nav>
         <a href="dashboard.html">Dashboard</a>
         <a href="#">Rides</a>
-        <a href="#">Logout</a>
+        <a href="logout.html">Logout</a>
     </nav>
 
     <div class="container">
